03-Flask-Cloudformation-Roman-Numerals-Converter/cfn-template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: |
  CloudFormation Template for Roman Numerals Converter Application. 
  This template creates Python Flask Web Application on Amazon Linux 2023  
  EC2 Instance with custom security group allowing http connections on port 80, 8080 and SSH connection on port 22. 
  Roman Numerals Converter Application is downloaded from Github repository, then installed on Flask.

Parameters:
  keyPair:
    Description: Choose your keypair
    Type: AWS::EC2::KeyPair::KeyName
    Default: firstkey

  LatestAmiId:
    Type: "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>"
    Default: "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"

Resources:
  myWebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId

      InstanceType: t2.micro

      KeyName: !Ref keyPair

      SecurityGroupIds:
        - !Ref mySecGrp # second way: !GetAtt mySecGrp.GroupId

      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}

      UserData: !Base64 |
        #! /bin/bash
        dnf update -y
        dnf install python3 -y
        dnf install python3-pip -y
        pip3 install flask
        cd /home/ec2-user
        wget https://raw.githubusercontent.com/ahmettgg/AWS_My_Project/main/03-Flask-Cloudformation-Roman-Numerals-Converter/roman-numerals-converter-app.py
        mkdir templates && cd /home/ec2-user/templates
        wget https://raw.githubusercontent.com/ahmettgg/AWS_My_Project/main/03-Flask-Cloudformation-Roman-Numerals-Converter/templates/index.html
        wget https://raw.githubusercontent.com/ahmettgg/AWS_My_Project/main/03-Flask-Cloudformation-Roman-Numerals-Converter/templates/result.html
        cd ..
        python3 roman-numerals-converter-app.py

  mySecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: accessible via web browser and terminal from anywhere # Required
      GroupName: cloudformation-project-http-ssh

      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

Outputs:
  webSiteURL:
    Description: URL of website
    Value: !Sub
      - http://${PublicDNS}
      - PublicDNS: !GetAtt myWebServer.PublicDnsName
